--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                 <div>
                     <div class="course-name_wrap">
                         <div class="course-name-desc" >
-                            <h1 class="green" data-aos="fade-right" data-aos-once="true" data-aos-duration="1000">АНГЛИЙСКИЙ ДЛЯ ДЕТЕЙ И ПОДРОСТКОВ</h1>
-                            <h2 class="orange" data-aos="fade-right" data-aos-once="true" data-aos-duration="1500">по методике Кембриджского Университета</h2>
+                            <h1 class="green" data-aos="fade-right" data-aos-once="true" data-aos-duration="1000">АНГЛИЙСКИЙ ДЛЯ&nbsp;ДЕТЕЙ И ПОДРОСТКОВ</h1>
+                            <h2 class="orange" data-aos="fade-right" data-aos-once="true" data-aos-duration="1500">По методике Кембриджского Университета</h2>
                             <p>Скидка 10% до 31 августа 2020 года</p>
                             <p><a meta-item="toFirst" class="button_orange_full">Отправить заявку</a> <a meta-item="toFirst" class="button_green">Подробнее</a></p>
                         </div>
@@ -160,7 +160,7 @@
                     <div class="course-name_wrap">
                         <div class="course-name-desc" >
                             <h1 class="green" data-aos="fade-right" data-aos-once="true" data-aos-duration="1000">АНГЛИЙСКИЙ ДЛЯ ДЕТЕЙ И ПОДРОСТКОВ</h1>
-                            <h2 class="orange" data-aos="fade-right" data-aos-once="true" data-aos-duration="1500">по методике Кембриджского Университета</h2>
+                            <h2 class="orange" data-aos="fade-right" data-aos-once="true" data-aos-duration="1500">По методике Кембриджского Университета</h2>
                             <p>Скидка 10% до 31 августа 2020 года</p>
                             <p><a meta-item="toFirst" class="button_orange_full">Отправить заявку</a> <a meta-item="toFirst" class="button_green">Подробнее</a></p>
                         </div>
@@ -510,7 +510,7 @@
                         <h4>Филиал Черемушки</h4>
                         <div class="adress-desc_adres">
                             Новые Черемушки<br />
-                            улю Профсоюзная, 43к1
+                            ул. Профсоюзная, 43к1
                         </div>
                         <div class="adress-desc_link"><a class="button_green" href="#">Подробнее</a></div>
                     </div>
