--- a/teachers.html
+++ b/teachers.html
@@ -146,104 +146,136 @@
                     <div class="moscow">
                         <div>
                             <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="500" data-aos-offset="200" >
+                                <a href="#">
                                 <img src="./assets/image/teacher/1.png" />
                                 <h4 class="red">ЯНА НЕМЧИНОВА</h4>
                                 <p>Исполнительный директор
-                                    Smart Education</p>
+                                    Smart Education</p></a>
                             </div>
                             <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="700" data-aos-offset="200">
+                                <a href="#">
                                 <img src="./assets/image/teacher/2.png" />
                                 <h4 class="red">Мария суетнова</h4>
                                 <p>Преподаватель,
                                     филиал Митинский, г. Москва</p>
+                                    </a>
                             </div>
                             <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="900" data-aos-offset="200">
+                                <a href="#">
                                 <img src="./assets/image/teacher/3.png" />
                                 <h4 class="red">карина мамонова</h4>
                                 <p>Преподаватель,
                                     филиал Митинский, г. Москва</p>
+                                </a>
                             </div>
                             <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="1100" data-aos-offset="200">
+                                <a href="#">
                                 <img src="./assets/image/teacher/4.png" />
                                 <h4 class="red">Анастасия сёмина</h4>
                                 <p>Преподаватель,
                                     филиал Митинский, г. Москва</p>
+                                </a>
                             </div>
                             <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="500" data-aos-offset="200" >
+                                <a href="#">
                                 <img src="./assets/image/teacher/1.png" />
                                 <h4 class="red">ЯНА НЕМЧИНОВА</h4>
                                 <p>Исполнительный директор
                                     Smart Education</p>
+                                </a>
                             </div>
                             <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="700" data-aos-offset="200">
+                                <a href="#">
                                 <img src="./assets/image/teacher/2.png" />
                                 <h4 class="red">Мария суетнова</h4>
                                 <p>Преподаватель,
                                     филиал Митинский, г. Москва</p>
+                                    </a>
                             </div>
                             <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="900" data-aos-offset="200">
+                                <a href="#">
                                 <img src="./assets/image/teacher/3.png" />
                                 <h4 class="red">карина мамонова</h4>
                                 <p>Преподаватель,
                                     филиал Митинский, г. Москва</p>
+                                    </a>
                             </div>
                             <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="1100" data-aos-offset="200">
+                                <a href="#">
                                 <img src="./assets/image/teacher/4.png" />
                                 <h4 class="red">Анастасия сёмина</h4>
                                 <p>Преподаватель,
                                     филиал Митинский, г. Москва</p>
+                                    </a>
+                                
                             </div>
                         </div>
                     </div>
                     <div class="novgorod">
                         <div>
                             <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="500" data-aos-offset="200" >
+                                <a href="#">
                                 <img src="./assets/image/teacher/1.png" />
                                 <h4 class="red">ЯНА НЕМЧИНОВА</h4>
                                 <p>Исполнительный директор
                                     Smart Education</p>
+                                    </a>
                             </div>
                             <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="700" data-aos-offset="200">
+                                <a href="#">
                                 <img src="./assets/image/teacher/2.png" />
                                 <h4 class="red">Мария суетнова</h4>
                                 <p>Преподаватель,
                                     филиал Митинский, г. Москва</p>
+                                    </a>
                             </div>
                             <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="900" data-aos-offset="200">
+                                <a href="#">
                                 <img src="./assets/image/teacher/3.png" />
                                 <h4 class="red">карина мамонова</h4>
                                 <p>Преподаватель,
                                     филиал Митинский, г. Москва</p>
+                                    </a>
                             </div>
                             <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="1100" data-aos-offset="200">
+                                <a href="#">
                                 <img src="./assets/image/teacher/4.png" />
                                 <h4 class="red">Анастасия сёмина</h4>
                                 <p>Преподаватель,
                                     филиал Митинский, г. Москва</p>
+                                    </a>
                             </div>
                             <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="500" data-aos-offset="200" >
+                                <a href="#">
                                 <img src="./assets/image/teacher/1.png" />
                                 <h4 class="red">ЯНА НЕМЧИНОВА</h4>
                                 <p>Исполнительный директор
                                     Smart Education</p>
+                                    </a>
                             </div>
                             <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="700" data-aos-offset="200">
+                                <a href="#">
                                 <img src="./assets/image/teacher/2.png" />
                                 <h4 class="red">Мария суетнова</h4>
                                 <p>Преподаватель,
                                     филиал Митинский, г. Москва</p>
+                                    </a>
                             </div>
                             <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="900" data-aos-offset="200">
+                                <a href="#">
                                 <img src="./assets/image/teacher/3.png" />
                                 <h4 class="red">карина мамонова</h4>
                                 <p>Преподаватель,
                                     филиал Митинский, г. Москва</p>
+                                    </a>
                             </div>
                             <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="1100" data-aos-offset="200">
+                                <a href="#">
                                 <img src="./assets/image/teacher/4.png" />
                                 <h4 class="red">Анастасия сёмина</h4>
                                 <p>Преподаватель,
                                     филиал Митинский, г. Москва</p>
+                                    </a>
                             </div>
                         </div>
                     </div>
