--- a/index.html
+++ b/index.html
@@ -158,19 +158,23 @@
                 </div>
                 <div>
                     <div class="course-name_wrap">
-                        <div class="course-name-desc" >
-                            <h1 class="green" data-aos="fade-right" data-aos-once="true" data-aos-duration="1000">АНГЛИЙСКИЙ ДЛЯ ДЕТЕЙ И ПОДРОСТКОВ</h1>
-                            <h2 class="orange" data-aos="fade-right" data-aos-once="true" data-aos-duration="1500">По методике Кембриджского Университета</h2>
-                            <p>Скидка 10% до 31 августа 2020 года</p>
-                            <p><a meta-item="toFirst" class="button_orange_full">Отправить заявку</a> <a meta-item="toFirst" class="button_green">Подробнее</a></p>
+                        <div class="course-name-desc">
+                            <h1 class="green" data-aos="fade-right" data-aos-once="true" data-aos-duration="1000"><span class="orange">Разговорный</span><br />
+                                английский</h1>
+                            <p>Курс позволит вам свободно общаться на английском, понимать собеседников и чувствовать
+                                себясвободно в любой ситуации!</p>
+                            <p>
+                                <a meta-item="toFirst" class="button_green">Записаться на курс</a>
+                            </p>
                         </div>
                         <div class="course-name-img">
                             <picture>
                                 <source
-                                    srcset="./assets/image/children-group/course-name@2.png 2x, ./assets/image/children-group/course-name.png 1x"
+                                    srcset="./assets/image/group-filial/course-name@2.png 2x, ./assets/image/group-filial/course-name.png 1x"
                                     type="image/png">
-                                <img src="./assets/image/children-group/course-name.png" alt="">
+                                <img src="./assets/image/group-filial/course-name.png" alt="">
                             </picture>
+                            
                         </div>
                     </div>
                 </div>
