--- a/children-group.html
+++ b/children-group.html
@@ -388,7 +388,7 @@
                             <p>Общение, первые английские слова, веселые песни, игры – программа настолько продумана,
                                 что не
                                 оставит ни одного ребенка равнодушным.</p>
-                            <p><a class="button_green" href="./assets/pdf/4-6.pdf">Скачать программу</a></p>
+                            <p><a class="button_green" target="_blank" href="./assets/pdf/4-6.pdf">Скачать программу</a></p>
                         </div>
                     </div>
                     <div class="tab-item-about">
@@ -439,7 +439,7 @@
                             <p>Общение, первые английские слова, веселые песни, игры – программа настолько продумана,
                                 что не
                                 оставит ни одного ребенка равнодушным.</p>
-                            <p><a class="button_green" href="./assets/pdf/7-9.pdf">Скачать программу</a></p>
+                            <p><a class="button_green" target="_blank" href="./assets/pdf/7-9.pdf">Скачать программу</a></p>
                         </div>
                     </div>
                     <div class="tab-item-about">
@@ -495,7 +495,7 @@
                                 запас, тренируют грамматические конструкции.
                             </p>
                             <p>В данном курсе школьники овладевают английским, познавая мир.</p>
-                            <p><a class="button_green" href="./assets/pdf/10-12.pdf">Скачать программу</a></p>
+                            <p><a class="button_green" target="_blank" href="./assets/pdf/10-12.pdf">Скачать программу</a></p>
                         </div>
                     </div>
                     <div class="tab-item-about">
@@ -554,7 +554,7 @@
                             <p>Темы для обсуждения наиболее актуальны для подростков, где они могут проявить свою
                                 фантазию и
                                 эффективнее обучаться.</p>
-                            <p><a class="button_green" href="./assets/pdf/13-17.pdf">Скачать программу</a></p>
+                            <p><a class="button_green" target="_blank" href="./assets/pdf/13-17.pdf">Скачать программу</a></p>
                         </div>
                     </div>
                     <div class="tab-item-about">
