--- a/group-filial.html
+++ b/group-filial.html
@@ -238,7 +238,7 @@
                     Начните с 10 вопросов!
                 </h2>
                 <p data-aos="fade-up" data-aos-once="true" data-aos-offset="250" data-aos-duration="1500"><a class="button_red_full"
-                        href="https://mrqz.me/5f58e9d98b67550044b35333">Пройти тест</a></p>
+                        href="https://mrqz.me/5f58e9d98b67550044b35333" target="_blank">Пройти тест</a></p>
             </div>
         </div>
 
