--- a/teenager-group.html
+++ b/teenager-group.html
@@ -150,7 +150,7 @@
                     <p>Уверенные шаги во взрослый мир</p>
                     <p>
                         <a meta-item="toFirst" class="button_green">Отправить заявку</a>
-                        <a href="https://onlinetestpad.com/t/smartroverstest" class="button_green_full">Пройти тест</a>
+                        <a href="https://onlinetestpad.com/t/smartroverstest" target="_blank" class="button_green_full">Пройти тест</a>
                     </p>
                 </div>
                 <div class="course-name-img">
@@ -269,7 +269,7 @@
                     соответствуют ли его знания требованиям ФГОС
                 </h2>
                 <p data-aos="fade-up" data-aos-once="true" data-aos-offset="250" data-aos-duration="1500"><a class="button_red_full"
-                        href="https://onlinetestpad.com/t/smartroverstest">Пройти тест</a></p>
+                        href="https://onlinetestpad.com/t/smartroverstest" target="_blank">Пройти тест</a></p>
             </div>
         </div>
 
@@ -491,7 +491,7 @@
                             <p>Темы для обсуждения наиболее актуальны для подростков, где они могут проявить свою
                                 фантазию и
                                 эффективнее обучаться.</p>
-                            <p><a class="button_green" href="./assets/pdf/13-17.pdf">Скачать программу</a></p>
+                            <p><a class="button_green" href="./assets/pdf/13-17.pdf" target="_blank">Скачать программу</a></p>
                         </div>
                     </div>
                     <div class="tab-item-about">
@@ -645,7 +645,7 @@
                     <h4 class="red">Определение уровня</h4>
                     <p>Уже сейчас вы сами можете узнать уровень ребенка и понять, соответствуют ли его знания
                         требованиям ФГОС</p>
-                    <p><a href="https://onlinetestpad.com/t/smartroverstest" class="button_green">Пройти тест</a></p>
+                    <p><a href="https://onlinetestpad.com/t/smartroverstest" target="_blank" class="button_green">Пройти тест</a></p>
                 </div>
                 <div class="course-build-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="300" data-aos-duration="1000">
                     <img src="./assets/image/teenager-group/build/build3.svg" alt="">
